test/netlist/error/unused-signal.bop
Main(a, b) = s
where
  s = id(a);
end where;
